# llamaagent

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pyrightconfig.json  .ruff.toml  ADVANCED_COGNITIVE_ARCHITECTURES.md  API_REFERENCE.md  BASE_AGENT_FIXES_SUMMARY.md  BASE_AGENT_FIX_SUMMARY.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CLI_FEATURES.md  CODEBASE_FIX_SUMMARY.md  COMPLETE_ANALYSIS_REPORT.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_IMPLEMENTATION_REPORT.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPLETE_MASTER_SYSTEM_SUMMARY.md  COMPLETE_SYSTEM_SUMMARY.md  COMPLETION_REPORT.md  COMPLETION_STATUS_REPORT.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_FIXES_COMPLETION_REPORT.md  COMPREHENSIVE_FIX_DOCUMENTATION.md  COMPREHENSIVE_GDT_SYSTEM_REPORT.md  COMPREHENSIVE_IMPLEMENTATION_PLAN.md  COMPREHENSIVE_INTEGRATION_GUIDE.md  COMPREHENSIVE_RESEARCH_PUBLICATION.md  COMPREHENSIVE_SHELL_GPT_COMPLETION_REPORT.md  COMPREHENSIVE_SYSTEM_FIXES_COMPLETION_REPORT.md  CONTRIBUTING.md  DATABASE_FIX_SUMMARY.md  DEPENDENCY_CONSOLIDATION_PROPOSAL.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  (+234 more)
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd-complete.yml  ci-cd.yml  ci.yml  comprehensive-ci.yml  deploy-docs.yml  docs.yml  main.yml  release.yml  test.yml
benchmark_data/: gaia_tasks.json
cleanup_files/duplicate_apps/: fastapi_app.py
cleanup_files/syntax_fixers/: check_syntax.py  detailed_syntax_report.py  final_comprehensive_fix.py  final_remaining_fixes.py  final_syntax_fix.py  final_syntax_fixes.py  find_syntax_errors.py  fix_all_issues.py  fix_all_syntax.py  fix_all_syntax_errors.py  fix_common_patterns.py  fix_critical_syntax_errors.py  fix_import_issues.py  fix_missing_parentheses.py  fix_react_syntax.py  fix_remaining_syntax.py  fix_remaining_syntax_errors.py  fix_specific_syntax_errors.py  fix_syntax_batch.py  fix_syntax_errors.py  manual_syntax_fixes.py  quick_syntax_check.py  syntax_scanner.py  validate_fixes.py
cleanup_files/utilities/: advanced_performance_optimizer.py  app.py  enhanced_benchmark_system.py  enhanced_mock_provider.py  evaluation_report.py  final_evaluation.py  final_working_system.py  llamaagent_cli.py  llamaagent_complete_cli.py  llamaagent_master_cli.py  llamaagent_master_program.py  master_cli_program.py  master_llamaagent_production_system.py  master_llamaagent_system.py  master_program.py  production_fastapi_app.py  production_llamaagent_api.py  quickstart.py  run_advanced_llamaagent.py  run_complete_system.py  run_experiment.py  run_master_cli.py  run_master_diagnostics.py  run_simple_diagnostics.py  simple_diagnostic_system.py  simple_enhanced_benchmark.py  simple_system_improver.py  validate_system.py  verify_complete_implementation.py
config/: cutting_edge_config.yaml  default.json  example_config.json  example_config.yaml  gdt_config.py  master_config.yaml  production.json
demo_datasets/: spre_demo.json
demo_output/: demo_dataset.json  demo_training_data.json  production_demo_report.json  working_demo_report.json
docker/: Dockerfile.advanced  entrypoint.sh  supervisord.conf
docker/compose/: docker-compose.advanced.yml  docker-compose.complete.yml  docker-compose.dev.yml  docker-compose.enhanced.yml  docker-compose.m3max.yml  docker-compose.master.yml  docker-compose.openai.yml  docker-compose.production.yml  docker-compose.shell-gpt.yml  docker-compose.simon.yml
docker/variants/: Dockerfile.advanced  Dockerfile.complete  Dockerfile.enhanced  Dockerfile.master  Dockerfile.openai  Dockerfile.production  Dockerfile.simon
docs/: api.md  examples.md  index.html  index.md  installation.html  installation.md  usage.html  usage.md
docs/api/: index.html  (+1 more)
examples/: agent_spawning_demo.py  ai_routing_demo.py  complete_demo.py  complete_openai_integration.py  config_usage.py  gaia_benchmark_demo.py  multi_agent_system.py  openai_stub_usage.py  simple_agent.py  spre_usage.py
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  llamaagent-deployment.yaml  namespace.yaml  secret.yaml  service.yaml
llamaagent/: __init__.py  client.py  main.py  types.py  utils.py
llm/: __init__.py  factory.py  models.py
monitoring/: alert_rules.yml  comprehensive_monitoring.py  docker-compose.monitoring.yml  prometheus.yml
nginx/: nginx.conf
notebooks/: 01_getting_started.ipynb  02_simon_ecosystem_cookbook.ipynb
prometheus/: prometheus.yml
python/: pyproject.toml
python/llamaagent/: __init__.py  agent.py  config.py  llm.py  memory.py  planner.py  types.py
python/llamaagent/tools/: __init__.py  base.py  calculator.py  web_search.py
reports/: bandit-report.json  build_report_20250707_191621.json
results/: research_report.md  results_20250618_101947.json  results_20250618_102024.json  results_20250618_105240.json  results_20250618_105246.json  results_20250618_105327.json  results_20250618_110028.json  results_20250618_110343.json  results_20250618_110402.json  results_20250618_110453.json  results_20250618_111838.json
scripts/: list_remaining_errors.py  migrate_to_pyproject.sh
security/: advanced_security.py
tests/: conftest.py  quick_test.py  simple_test.py  test_ai_routing.py  test_api_minimal.py  test_base_agent.py  test_baseline_agents_comprehensive.py  test_basic.py  test_basic_functionality.py  test_client.py  test_cognitive_architecture.py  test_complete_system.py  test_comprehensive_core.py  test_comprehensive_coverage.py  test_comprehensive_functionality.py  test_comprehensive_integration.py  test_database.py  test_full_system.py  test_gaia_benchmark_comprehensive.py  test_gdt.py  test_langgraph_integration.py  test_langgraph_integration_comprehensive.py  test_m3_performance.py  test_main.py  test_master_program.py  test_runner.py  test_simon_ecosystem_integration.py  test_spre_benchmark.py  test_spre_evaluator_comprehensive.py  test_spre_generation.py  test_tools_module.py  test_vector_memory.py  test_vector_memory_comprehensive.py
tools-txts/: 01_MultiStepPlanning.txt
(+162 files in other folders)
