[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llamaagent"
version = "0.1.0"
description = "An autonomous agent framework that orchestrates multiple llama services"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
Author: Nik Jois
    {name = "LlamaSearch.ai", Email: nikjois@llamasearch.ai
]
Author: Nik Jois
    {name = "LlamaSearch.ai", Email: nikjois@llamasearch.ai
]
keywords = [
    "agent",
    "ai",
    "llm",
    "orchestration",
    "autonomous",
    "llamasearch"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
    "anthropic>=0.15.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.0.262",
]
vector = [
    "llamadb>=0.1.0",
    "sentence-transformers>=2.2.2",
]
full = [
    "llamaagent[dev,vector]",
]

[project.urls]
"Homepage" = "https://github.com/llamasearch/llamaagent"
"Bug Tracker" = "https://github.com/llamasearch/llamaagent/issues"
"Documentation" = "https://github.com/llamasearch/llamaagent/blob/main/README.md"

[tool.setuptools]
packages = ["llamaagent"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["E", "F", "I", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py" 